--- a/py_cclas.ini
+++ b/py_cclas.ini
@@ -20,6 +20,9 @@ recursive : False
 delay : 0.01
 beep : True
 
+[pandas]
+colsMax=23
+
 [json]
 outpath : ${watchdog:path}
 encoding : ${default:encode}
